[docs] Get Javadoc working on Jigsaw again.