@@ -56,8 +56,8 @@ afterEvaluate {
         testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.1'
         implementation group: 'org.hamcrest', name: 'hamcrest', version: '2.1'
         testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.1'
-        implementation "org.assertj:assertj-core:3.13.2"
-        testImplementation "org.assertj:assertj-core:3.13.2"
+        api "org.assertj:assertj-core:3.13.2"
+        //testImplementation "org.assertj:assertj-core:3.13.2"
 
         if (JavaVersion.current().isJava12Compatible()) {
             testCompile 'org.testfx:openjfx-monocle:jdk-12.0.1+2'
@@ -109,11 +109,22 @@ afterEvaluate {
     }
 
     javadoc {
-        afterEvaluate {
-            exclude '*module-info*'
-            if (JavaVersion.current().isJava9Compatible()) {
+        source = sourceSets.main.allJava
+        options.addBooleanOption('html5', true)
+        //dependsOn compileModuleInfoJava
+        if (JavaVersion.current().isJava9Compatible()) {
+            inputs.property("moduleName", moduleName)
+
+            doFirst {
                 options.addStringOption('-module-path', classpath.asPath)
+                options.addMultilineStringsOption('-add-modules').setValue([
+                        'javafx.graphics', 'javafx.controls', 'javafx.swing', 'org.hamcrest', 'org.testfx'])
+                options.addMultilineStringsOption('-add-exports').setValue([
+                        'javafx.graphics/com.sun.javafx.application=org.testfx',
+                        'javafx.graphics/com.sun.glass.ui=org.testfx'])
             }
+        } else {
+            exclude '*module-info*'
         }
     }
 
@@ -128,9 +139,11 @@ afterEvaluate {
                         '--module-path', classpath.asPath,
                         '--add-modules', 'org.junit.jupiter.api',
                         '--add-modules', 'org.hamcrest',
+                        '--add-modules', 'org.assertj.core',
                         '--add-reads', "$moduleName=org.junit.jupiter.api",
                         '--add-reads', "$moduleName=javafx.controls",
                         '--add-reads', "$moduleName=org.hamcrest",
+                        '--add-reads', "$moduleName=org.assertj.core",
                         '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
                 ]
                 classpath = files()
